# crispy-invention-public

./: .gitignore  .unibeautifyignore  .unibeautifyrc.json  CODE_OF_CONDUCT.md  Makefile  POpenMP Rendimiento.xlsx  README.md  image-par  image-par.cpp  image-seq  image-seq.cpp  index.html  mediaYOrden.c  pi  salida.txt  salidaB.txt  salidaP.txt  solucion  solucion2  test.c  unibeautifyrc.yaml
AA/Competicion/: competicion-405951-405834.docx
AA/Practice 1/: Memoria P1.docx
AA/Practice 2/: practica2-405951-405834.docx
AA/Tutorial 1/: Memoria T1.docx
AA/Tutorial 3/: results.arff
AA/Tutorial 4/: qlearningAgents.py  qtableEj1.txt  qtableEj2.txt  tutorial4-100405951-100405834.docx
AC/: AC Cuestionarios.txt
AC/Lab 3/: CMakeLists.txt  Memoria Lab3.docx
AC/Lab 3/apps/: CMakeLists.txt  atomic_main.cpp  locked_main.cpp  seq_main.cpp
AC/Lab 3/data/: values.txt
AC/Lab 3/include/: atomicbuffer.h  concrunner.h  generators.h  lockedbuffer.h  prodcons.h  reducers.h  seqbuffer.h  seqrunner.h  tests.h
CSI/: Calculadora.xlsx  ResumenPracticas.txt
FBD/: PlantillaDiseñoRelacional.docx  PlantillaDiseñoRelacional.pptx  TablaNivelesArbolB.xlsx
HO/: HO Test.txt  calc.ods
IS/: IS 2021 Plantilla Práctica.docx  IS Preguntas tests.txt  PLANTILLA_PREGUNTAS.doc  Requirements-template-ES.xlsx
Python/: helloWorld.py  lista.py  torneoLoL.py
SSOO/: PyRTest1&2.xlsx  RespuestasTest1y2.txt  a.out  escribirFile copia.c  escribirFile.c
docs/: index.html
enput/: landscape.bmp.REMOVED.git-id
output/: landscape.bmp.REMOVED.git-id  landscapenuestra.bmp.REMOVED.git-id
(+2489 files in other folders)
